Fix dataloader with eclipse